# UniversalApiTester

./: .gitignore  CMakeLists.txt  README.md  UniversalApiTester.kdev4  build.gradle  settings.gradle
application/src/main/java/ch/ranta/universal/tester/api/grpc/: Receiver.java  Sender.java
application/src/main/java/ch/ranta/universal/tester/api/jms/: Receiver.java  Sender.java
application/src/main/java/ch/ranta/universal/tester/api/rest/: JmsService.java
application/src/main/java/ch/ranta/universal/tester/service/: GrpcService.java  JmsService.java
application/src/test/java/ch/ranta/universal/tester/service/: GrpcServiceTest.java  JmsServiceTest.java
docker/: activemq.sh
domain/src/main/java/ch/ranta/universal/tester/domain/entities/: ApiResponse.java
domain/src/main/java/ch/ranta/universal/tester/dto/: JsonEntity.java
primary-adapter/src/main/java/ch/ranta/universal/tester/api/dto/: Response.java
primary-adapter/src/main/java/ch/ranta/universal/tester/api/jms/: JmsReceiver.java
primary-adapter/src/main/java/ch/ranta/universal/tester/api/rest/: GrpcJms.java  JmsJms.java
primary-adapter/src/test/java/ch/ranta/universal/tester/api/jms/: ReceiverConfigTest.java
primary-adapter/src/test/java/ch/ranta/universal/tester/api/rest/: GrpcJmsTest.java  JmsJmsTest.java
primary-port/src/main/java/ch/ranta/universal/tester/api/: Creator.java
primary-port/src/main/java/ch/ranta/universal/tester/api/dto/: JsonDto.java
primary-port/src/main/java/ch/ranta/universal/tester/api/jms/: JmsReceiver.java  ReceiverConfig.java
primary-port/src/main/java/ch/ranta/universal/tester/api/mapper/: JsonDtoMapper.java
primary-port/src/main/java/ch/ranta/universal/tester/api/rest/: Call.java  GrpcJms.java  JmsJms.java
primary-port/src/test/java/ch/ranta/universal/tester/api/jms/: JmsReceiverTest.java
primary-port/src/test/java/ch/ranta/universal/tester/api/rest/: CallTest.java  GrpcJmsTest.java  JmsJmsTest.java
secondary-adapter/src/main/java/ch/ranta/universal/tester/api/grpc/: GrpcSender.java
secondary-adapter/src/main/java/ch/ranta/universal/tester/api/jms/: JmsSender.java  SenderConfig.java
secondary-adapter/src/test/java/ch/ranta/universal/tester/api/grpc/: GrpcSenderTest.java
secondary-port/src/main/java/ch/ranta/universal/tester/api/jms/: JmsSender.java  SenderConfig.java
secondary-port/src/main/java/ch/ranta/universal/tester/dto/: Protobuf.java
secondary-port/src/test/java/ch/ranta/universal/tester/api/jms/: JmsSenderTest.java  SenderConfigTest.java
secondary-port/src/test/java/ch/ranta/universal/tester/dto/: ProtobufTest.java
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  Kernel.h  ListenerPlugin.h  PluginConfig.h  RequestsPlugin.h  SystemPlugin.h
src/api/listener/: CMakeLists.txt
src/api/listener/demo/: CMakeLists.txt
src/api/requests/demo/: CMakeLists.txt
src/api/systems/: CMakeLists.txt
src/api/systems/demo/: CMakeLists.txt  demo.cpp  demo_config.h
src/app/: Application.cpp  Application.h
src/common/: Plugin.cpp  Plugin.h  SharedLibraryLoader.h  logger.cpp  logger.h
src/headers/: universalapitester_facilities.h
starter/src/main/java/ch/ranta/universal/tester/: App.java
starter/src/main/resources/: application.yml
text/: INFO.txt
